Modify caret